--- a/hugo.toml
+++ b/hugo.toml
@@ -13,7 +13,7 @@ enableEmoji = true
 #disqusShortname = "dudung-github-io-blog"
 
 [params]
-author = "Sparisoma Viridi"
+author = "Charnadi Lesmana"
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Sparisoma Viridi's personal website"
 keywords = "blog,developer,personal"
